force-app/main/default/objects/Training_Session__c/Training_Session__c.object-meta.xml
<CustomObject>
    <label>Training Session</label>
    <nameField>
        <displayFormat>TS-{{0000}}</displayFormat>
        <label>Training Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>