force-app/main/default/objects/Training_Session__c/fields/Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Duration_Min__c</fullName>
    <description>Duration Min field for Fitness Tracker.</description>
    <label>Duration Min</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>