force-app/main/default/objects/Training_Session__c/fields/Scheduled_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Event_Id__c</fullName>
    <description>Scheduled Event Id field for Fitness Tracker.</description>
    <label>Scheduled Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>