force-app/main/default/objects/Training_Session__c/fields/Session_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Session_DateTime__c</fullName>
    <description>Session DateTime field for Fitness Tracker.</description>
    <label>Session DateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>