force-app/main/default/objects/Training_Session__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status field for Fitness Tracker.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
    <value><fullName>Scheduled</fullName><default>true</default><label
        >Scheduled</label></value>
    <value><fullName>Completed</fullName><default>false</default><label
        >Completed</label></value>
    <value><fullName>No-show</fullName><default>false</default><label
        >No-show</label></value>
    <value><fullName>Cancelled</fullName><default>false</default><label
        >Cancelled</label></value>
    </valueSetDefinition></valueSet>
</CustomField>