force-app/main/default/objects/Training_Session__c/fields/Trainer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Profile__c</fullName>
    <description>Trainer Profile field for Fitness Tracker.</description>
    <label>Trainer Profile</label>
    <type>Lookup</type>
    <referenceTo>Trainer_Profile__c</referenceTo>
    <relationshipLabel>Trainer Profile</relationshipLabel>
    <relationshipName>TrainingSessions</relationshipName>
</CustomField>